# onboarding-python

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  lume.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  pypi.yml
alice/: VERSION  __init__.py  config.py  public_api.py
alice/auth/: auth.py  auth_client.py  auth_errors.py  auth_sdk.py  cached_token_stack.py  catched_token_stack.py  token_tools.py
alice/face/: face.py  face_models.py
alice/onboarding/: decision.py  device_info.py  onboarding.py  onboarding_client.py  onboarding_errors.py  onboarding_sdk.py  report_version.py  tools.py  user_info.py  version.py
alice/onboarding/enums/: certificate_locale.py  document_side.py  document_source.py  document_type.py  match_case.py  (+4 more)
alice/sandbox/: sandbox.py  sandbox_client.py  sandbox_errors.py  sandbox_sdk.py
alice/webhooks/: webhook.py  webhooks.py  webhooks_client.py
examples/: auth.py  certified_onboarding.py  dummy_cached_token_stack.py  face.py  onboarding.py  onboarding_ad_hoc.py  onboarding_get_users.py  onboarding_report_v0.py  onboarding_report_v1.py  onboarding_request.py  onboarding_wait_for_completion_false.py  onboarding_with_certificate.py  onboarding_with_flows.py  onboarding_with_identification.py  onboarding_with_screening.py  onboarding_with_user_matching.py  onboarding_with_webhooks.py  sandbox.py
requirements/: dev-requirements.txt  dev.txt  requirements.txt
tests/: conftest.py  test_integration_auth.py  test_integration_flows.py  test_integration_onboarding.py  test_integration_sandbox.py  test_integration_webhooks.py  test_unit_cached_token_stack.py
(+88 files in other folders)
