[metadata]
name = alice-onboarding
version = file: alice/VERSION
description = Alice Onboarding Python SDK
long_description = file: README.md
long_description_content_type = "text/markdown"
author = Alice Biometrics
author_email = support@alicebiometrics.com
url = https://github.com/alice-biometrics/onboarding-python
keywords = ["onboarding", "biometrics", "kyc", "alice"]
sclassifiers = [
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
    ],
platforms = any
license_file = LICENSE

[mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true

# --strict end


[options]
python_requires = >=3.6
install_requires =
    pyjwt>=2.3.0,<3.0.0
    pydantic>=1.8.2,<2.0.0
    requests>=2.26.0,<3.0.0
    meiga>=1.2.12,<2.0.0
packages = find_namespace:
# package_dir =
#     = alice
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*

